--- a/presentation/talk.tex
+++ b/presentation/talk.tex
@@ -64,7 +64,25 @@
 
 % MOTIVATION
 % ------------------------------------------------------------------------
-\section{Introduction}
+\begin{frame}[c]
+    \frametitle{Requirements}
+		\begin{alertblock}{High priority}
+			\begin{itemize}
+				\item High numer of sensors: 48
+				\item As accurate as possible:  $\pm0.1\mathrm{K}$
+				\item Support for temperature and humidity sensors
+				\item Send results to couchDB
+			\end{itemize}
+		\end{alertblock}
+		\begin{exampleblock}{Low priority}
+			\begin{itemize}
+				\item Extendable
+				\item Plug and Play
+				\item Sample interval $\le 1\mathrm{s}$
+				\item Easy configuration at runtime
+			\end{itemize}
+		\end{exampleblock}
+\end{frame}
 \begin{frame}[c]
     \frametitle{Sensor comparison}
 \begin{tabular}{ M M M M}
@@ -79,13 +97,53 @@
 \end{tabular}
 \end{frame}
 \begin{frame}[c]
-\end{frame}
-\begin{frame}[c]
     \frametitle{Logical structure}
   \begin{center}
   	\includegraphics[width=0.9\linewidth]{img/plan2_color.pdf}\\
   \vspace{0.5cm}
   \end{center}
     
+\end{frame}
+\begin{frame}[c]
+    \frametitle{Proof of concept}
+  \begin{center}
+  	\includegraphics[width=0.8\linewidth]{img/pic/IMG_20140410_213954.jpg}\\
+  \vspace{0.5cm}
+  \end{center}
+\end{frame}
+\begin{frame}[c]
+    \frametitle{First load of PCBs arrived}
+  \begin{center}
+  	\includegraphics[width=0.8\linewidth]{img/pic/platinen_leer.jpg}\\
+  \vspace{0.5cm}
+  \end{center}
+\end{frame}
+\begin{frame}[c]
+    \frametitle{Hours of soldering later...}
+  \begin{center}
+  	\includegraphics[width=0.8\linewidth]{img/pic/platinen_geloetet.jpg}\\
+  \vspace{0.5cm}
+  \end{center}
+\end{frame}
+\begin{frame}[c]
+    \frametitle{Collector board}
+  \begin{center}
+  	\includegraphics[width=0.4\linewidth]{img/pic/collector_geloetet.jpg}\\
+  \vspace{0.5cm}
+  \end{center}
+\end{frame}
+\begin{frame}[c]
+    \frametitle{3D - Printing}
+  \begin{center}
+  	\includegraphics[width=0.8\linewidth]{img/pic/IMG_20140530_184940.jpg}\\
+  \vspace{0.5cm}
+  \end{center}
+\end{frame}
+\begin{frame}[c]
+    \frametitle{Finished cases}
+  \begin{center}
+  	\includegraphics[width=0.9\linewidth]{img/pic/cases.jpg}\\
+  \vspace{0.5cm}
+  \end{center}
 \end{frame}
 \end{document}
