--- a/presentation/talk.tex
+++ b/presentation/talk.tex
@@ -234,7 +234,14 @@
 \begin{frame}[c]
     \frametitle{User interface}
   \begin{center}
-  	\includegraphics[width=0.9\linewidth]{img/db2.png}\\
+  	\includegraphics[width=0.9\linewidth]{img/ui.png}\\
+  \vspace{0.5cm}
+  \end{center}
+\end{frame}
+\begin{frame}[c]
+    \frametitle{User interface}
+  \begin{center}
+  	\includegraphics[width=0.9\linewidth]{img/ui2.png}\\
   \vspace{0.5cm}
   \end{center}
 \end{frame}
