--- a/presentation/talk.tex
+++ b/presentation/talk.tex
@@ -252,13 +252,13 @@
   \vspace{0.5cm}
   \end{center}
 \end{frame}
-\begin{frame}[c]
-    \frametitle{3D - Printing}
-  \begin{center}
-  	\includegraphics[width=0.8\linewidth]{img/pic/IMG_20140530_184940.jpg}\\
-  \vspace{0.5cm}
-  \end{center}
-\end{frame}
+%\begin{frame}[c]
+%    \frametitle{3D - Printing}
+%  \begin{center}
+%  	\includegraphics[width=0.8\linewidth]{img/pic/IMG_20140530_184940.jpg}\\
+%  \vspace{0.5cm}
+%  \end{center}
+%\end{frame}
 \begin{frame}[c]
     \frametitle{Distribution in the field cage}
   \begin{center}
@@ -274,31 +274,15 @@
   \end{center}
 \end{frame}
 \begin{frame}[c]
-    \frametitle{Filled Requirements}
-		\begin{alertblock}{Must}
-      \textcolor{blue!30!green}{
-			\begin{itemize}
-        \item Temperature and humidity measurement
-        \item High accuracy: $\pm0.1\mathrm{K}$
-        \item High number of sensors: $\approx$ 40
-        \item Low cost
-        \item Send results to couchDB
-        \item Ready to use
-        \item Reliable and stable
-			\end{itemize}
-    }
+    \frametitle{Improvements}
+		\begin{alertblock}{Problems}
+			\textcolor{blue!30!green}{
+				\begin{itemize}
+					\item DHCP
+					\item DNS
+					\item Cases
+				\end{itemize}
+			}
 		\end{alertblock}
-\end{frame}
-\begin{frame}[c]
-    \frametitle{Requirements}
-		\begin{exampleblock}{May}
-			\begin{itemize}
-				\item Extendible
-        \item Easy maintenance
-				\item Plug and Play
-				\item Sample interval $\le 1\mathrm{s}$
-				\item Easy configuration at runtime
-			\end{itemize}
-		\end{exampleblock}
 \end{frame}
 \end{document}
