--- a/presentation/talk.tex
+++ b/presentation/talk.tex
@@ -252,6 +252,13 @@
   \vspace{0.5cm}
   \end{center}
 \end{frame}
+\begin{frame}[c]
+    \frametitle{Ready to install}
+  \begin{center}
+  	\includegraphics[width=0.9\linewidth]{img/set.jpg}\\
+  \vspace{0.5cm}
+  \end{center}
+\end{frame}
 %\begin{frame}[c]
 %    \frametitle{3D - Printing}
 %  \begin{center}
@@ -261,13 +268,6 @@
 %\end{frame}
 \begin{frame}[c]
     \frametitle{Distribution in the field cage}
-  \begin{center}
-  	\includegraphics[width=0.9\linewidth]{img/installPlan.pdf}\\
-  \vspace{0.5cm}
-  \end{center}
-\end{frame}
-\begin{frame}[c]
-    \frametitle{Identification}
   \begin{center}
   	\includegraphics[width=0.9\linewidth]{img/installPlan.pdf}\\
   \vspace{0.5cm}
