--- a/report/main.tex
+++ b/report/main.tex
@@ -12,6 +12,9 @@
 \usepackage{color}
 \usepackage{longtable}
 \usepackage{tabularx}
+\usepackage[bookmarks]{hyperref}
+\hypersetup{pdftex,colorlinks=true,allcolors=black}
+\usepackage{hypcap}
 % the following commands control the margins:
 %\topmargin=-1in    % Make letterhead start about 1 inch from top of page 
 %\textheight=8.5in    % text height can be bigger for a longer letter
@@ -31,13 +34,15 @@ For temperature measurements, we use the TSIC 506F temperature sensor
 integrated circuit. At a relatively low price of about \EUR{7} per device, it
 is able to deliver very high accuracy (see table \ref{tab:tsic}).\\
 The temperature is converted to a digital value, which is sent out over a
-proprietary one wire protocol variant, called \emph{ZAC-Wire} (details see section \ref{chap:zac}).\\
+proprietary one wire protocol variant, called \emph{ZAC-Wire}. The Transmission structure can be seen in figure \ref{fig:tsic_transmission}. Details about the ZACwire protocol are described in section \ref{chap:zac}.\\
+The temperature $T_{cels}$ in celsius can be calculated from the received value $T_{dig}$ using
+$$T_{cels} = \frac{T_{dig}}{2047} \cdot 70\,^{\circ} - 10\,^{\circ}.$$
 In order to minimize soldering heat, which would influence the calibration, we used the TO92 packaged sensor.
 \begin{table}[Hh!]
 	\centering
 	\begin{tabular}{| r | c |}
 		\hline
-		Temperature range & $-10\,^{\circ}\mathrm{C}$ to $-10\,^{\circ}\mathrm{C}$\\
+		Temperature range & $-10\,^{\circ}\mathrm{C}$ to $60\,^{\circ}\mathrm{C}$\\
 		\hline
 		Calibrated accuracy & $\pm 0.1\,\mathrm{K}$  \\
 		\hline
@@ -47,6 +52,17 @@ In order to minimize soldering heat, which would influence the calibration, we u
 	\caption{TSIC 506F specs}
 	\label{tab:tsic}
 \end{table}
+\begin{figure}[Hh!]
+	\centering
+	\definecolor{lightgray}{gray}{0.8}
+	\begin{bytefield}[endianness=big, bitwidth=2.1em]{10}
+		\bitheader{0-9}\\
+    \bitbox{1}{ST} & \bitbox{5}{0} & \bitbox{3}{$T_{dig}$[10:8]} & \bitbox{1}{P}\\
+    \bitbox{1}{ST} & \bitbox{8}{$T_{dig}$[7:0]} & \bitbox{1}{P}
+	\end{bytefield}
+  \caption{TSIC transmission structure. The temperature is sent over the wire, with two ZACwire transmissions. P is an even parity bit. ST is the start bit.}
+	\label{fig:tsic_transmission}
+\end{figure}
 \subsection{HYT271}
 \section{Logical design}
 Our network architecture is structured into 3 parts (see figure \ref{fig:topo}):
@@ -161,13 +177,13 @@ next transmission to begin.
 	\item The receive buffer is reset.
 	\item Interrupts are enabled.
 \end{itemize}
-\paragraph{}
+%\paragraph{}
 Our algorithm is not able to see stop bits correctly, if $T_{ovf}$ is configured badly.
 However in our case we deliberately configured $T_{ovf}$ to be bigger that the maximum
 high time in case of a stop bit.
 This allows us to only see the end of the complete transmission, as a TSIC sensor also
-sends a useless stop bit after the first 9 bits.
-\paragraph{}
+sends a useless stop bit after the first 9 bits.\\
+%\paragraph{}
 As we have up to 8 sensors connected to the Atmega88, we have to do one measurement
 after another. as one sample of a measurement takes $>100\,\mathrm{ms}$ we would run
 into problems reaching the desired sampling rate of $>1\,\mathrm{Hz}$.
@@ -309,6 +325,12 @@ figure \ref{fig:packetorder}.\\
 \subsection{Software}
 \subsection{User interface}
 \chapter{Deployment}
+\section{Read before modifying}
+EEPROM persistance enable
+LEDs need most of power
+Careful with multiple power sources
+Arduino fuses only accessable via ISP
+Makefile incomplete (.h dependencies)
 \chapter{References}
 %\renewcommand\refname{\vskip -1cm}
 %\bibliographystyle{abbrv}
