--- a/report/main.tex
+++ b/report/main.tex
@@ -101,14 +101,15 @@ Our network architecture is structured into 3 parts (see figure \ref{fig:topo}):
 \section{Protocols}
 \subsection{ZACwire}\label{chap:zac}
 ZACwire is a prorietary one wire comminucation protocol, developed
-by IST AG. Only one data line is needed. Bits are represented by
+by IST AG. Only one data line is needed.\\
+Bits are represented by
 different duty cycles of the waveform within the bit time $T_b$.
 Every normal bit starts and ends with a falling edge. At the beginning
 of each transmission, a start bit with a duty cycle of 50\% is
 transmitted. From this start bit, the bit time $T_b$ for the
 transmission can be extracted. If the bus is high for a time $>T_b$
 the transmission ends, this is called a Stop bit. Figure \ref{fig:zac}
-shows the four different wafeform types, a ZACwire signal may be
+shows the four different wafeform types, of which a ZACwire signal may be
 composed off. Figure \ref{fig:zacexample} shows an example
 transmission.
 \begin{figure}
@@ -125,6 +126,15 @@ transmission.
 \end{figure}
 \subsection{I2C}
 \subsection{RS485}
+RS485 is a transmission line standard, which specifies differential line communication over twisted pair cables. It allows very long distance communication of up to 1 kilometer with high noise immunity and reduced noise emission.\\
+Figure \ref{fig:rs485} illustrates the working principle of the protocol. The encoder transforms a single bit line DI into two separate lines A and B. If DI is high, the output voltage at line A, $V_{OA}$ will bigger than at line B ($V_{OB}$). If the input voltage at DI is low, $V_{OB}>V_{OA}$ holds.\\
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\textwidth]{img/rs485.pdf}
+  \caption{RS485 encoding/decoding - Logical structure. Source: \ref{XXX}.}
+	\label{fig:rs485}
+\end{figure}
+
 \chapter{Implementation}
 \section{Toolchain}
 - Makefiles
